--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -34,7 +34,7 @@
       </div>
       <ul class="flex flex-col p-4 xl:p-0 mt-4 font-medium border border-gray-100 rounded-lg  xl:space-x-8 rtl:space-x-reverse xl:flex-row xl:mt-0 xl:border-0  dark:bg-gray-800 xl:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a href="#" class="block py-2 px-3 text-gray-100 rounded xl:bg-transparent xl:text-gray-100 xl:p-0 xl:dark:text-blue-500" aria-current="page">Home</a>
+          <a href="./home" class="block py-2 px-3 text-gray-100 rounded xl:bg-transparent xl:text-gray-100 xl:p-0 xl:dark:text-blue-500" aria-current="page">Home</a>
         </li>
         <li>
           <a href="./films" class="block py-2 px-3 text-gray-100 rounded hover:bg-gray-100 xl:hover:bg-transparent xl:hover:text-white xl:p-0 xl:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white xl:dark:hover:bg-transparent dark:border-gray-700">All Films</a>
@@ -45,7 +45,7 @@
         <li>
           <div>
             <button type="button" data-dropdown-toggle="auth" class="inline-flex items-center font-medium justify-center text-sm text-gray-100 dark:text-white rounded-lg cursor-pointer hover:text-white">
-              <i class="bi bi-heart-fill text-1xl ml-3 text-red-600"></i> 
+              <a href="./my-favorite"><i class="bi bi-heart-fill text-1xl ml-3 text-red-600"></i></a> 
             </button>
           </div>
         </li>
@@ -57,7 +57,7 @@
             <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700" id="auth">
               <ul class="py-2 font-medium" role="none">
                 <li>
-                  <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
+                  <a href="./admin/dashboard" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
                     <div class="inline-flex items-center">
                       Admin Mode
                     </div>
