--- a/src/app/component/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/component/admin-dashboard/admin-dashboard.component.html
@@ -7,25 +7,25 @@
             <div class="w-72 h-36 bg-yellow-100 flex justify-center items-center">
                 <div class="text-center">
                     <p class="text-2xl font-bold text-gray-800"><i class="bi bi-people-fill text-5xl text-blue-600"></i>&nbsp;&nbsp; All Users</p>
-                    <p class="text-2xl font-semibold mt-3 text-gray-700">200</p>
+                    <p class="text-2xl font-semibold mt-3 text-gray-700">{{allUsers}}</p>
                 </div>
             </div>
             <div class="w-72 h-36 bg-red-100 flex justify-center items-center">
                 <div class="text-center">
                     <p class="text-2xl font-bold text-gray-800"><i class="bi bi-people-fill text-5xl text-blue-600"></i>&nbsp;&nbsp; Active Users</p>
-                    <p class="text-2xl font-semibold mt-3 text-gray-700">200</p>
+                    <p class="text-2xl font-semibold mt-3 text-gray-700">{{activeUsers}}</p>
                 </div>
             </div>
             <div class="w-72 h-36 bg-blue-100 flex justify-center items-center">
                 <div class="text-center">
                     <p class="text-2xl font-bold text-gray-800"><i class="bi bi-film text-5xl text-blue-600"></i>&nbsp;&nbsp; All Movies</p>
-                    <p class="text-2xl font-semibold mt-3 text-gray-700">200</p>
+                    <p class="text-2xl font-semibold mt-3 text-gray-700">{{allMovies}}</p>
                 </div>
             </div>
             <div class="w-72 h-36 bg-gray-200 flex justify-center items-center">
                 <div class="text-center">
                     <p class="text-2xl font-bold text-gray-800"><i class="bi bi-film text-5xl text-blue-600"></i>&nbsp;&nbsp; Active Movies</p>
-                    <p class="text-2xl font-semibold mt-3 text-gray-700">200</p>
+                    <p class="text-2xl font-semibold mt-3 text-gray-700">{{activeMovies}}</p>
                 </div>
             </div>
         </div>
@@ -58,27 +58,27 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody *ngFor="let movie of MoviesArray">
                     <tr
                         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                         <td class="p-4">
-                            <img src="https://images.justwatch.com/poster/305436330/s166/fast-x.webp"
+                            <img [src]="movie.img"
                                 class="w-16 md:w-32 max-w-full max-h-full" alt="Apple Watch">
                         </td>
                         <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
-                            Fast X
+                            {{movie.name}}
                         </td>
 
                         <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
-                            142 min
+                            {{movie.duration}}
                         </td>
                         <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
-                            2023-05-17
+                            {{movie.Released}}
                         </td>
                         <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
-                            <span
+                            <span  *ngIf="movie.status === 'Blocked' "
                                 class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-red-900 dark:text-red-300">Blocked</span>
-                            <span
+                            <span *ngIf="movie.status === 'Active' "
                                 class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300">Active</span>
                         </td>
                     </tr>
@@ -89,5 +89,7 @@
     </div>
 
     </div>
+
+    
 </section>
 
