--- a/src/app/watch-film/watch-film.component.html
+++ b/src/app/watch-film/watch-film.component.html
@@ -23,8 +23,8 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="m1 9 4-4-4-4" />
             </svg>
-            <a href="#"
-              class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Projects</a>
+            <a href="./films"
+              class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">All Movies</a>
           </div>
         </li>
         <li aria-current="page">
@@ -34,7 +34,7 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="m1 9 4-4-4-4" />
             </svg>
-            <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Flowbite</span>
+            <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">{{movie.name}}</span>
           </div>
         </li>
       </ol>
@@ -51,7 +51,7 @@
 
     <!-- video Player -->
 
-    <iframe class="w-11/12" height="600px" src="https://www.youtube-nocookie.com/embed/EYmbPYWlyVk?si=wo92kv0a9K6YjWAe"
+    <iframe class="w-11/12" height="600px" [src]="movie.src"
       title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -60,12 +60,12 @@
   <div class=" mt-20 mb-20 flex flex-col lg:flex-row">
     <div class="hidden xl:block">
       <img class="rounded-lg shadow" width="350px"
-        src="https://images.justwatch.com/poster/305436330/s166/fast-x.webp" />
+        [src]="movie.img" />
     </div>
 
     <div class="lg:ml-5">
       <div>
-        <p class="text-4xl">Fast X</p>
+        <p class="text-4xl">{{movie.name}}</p>
       </div>
       <div class="mt-2">
         <button type="button"
@@ -76,41 +76,34 @@
 
       <div class="mt-3">
         <p class="text-gray-700">
-          Tenth and final installment of the Fast and Furious franchise.
+          {{movie.description}}
         </p>
       </div>
 
       <div class="flex flex-col lg:flex-row w-full">
         <div class="w-full lg:w-5/12 m-2">
           <div class="mt-3">
-            <p><b class="font-semibold">Released: </b>2023-05-17</p>
+            <p><b class="font-semibold">Released: </b>{{movie.Released}}</p>
           </div>
           <div class="mt-3">
-            <p><b class="font-semibold">Genre: </b> Action, Crime, Thriller</p>
+            <p><b class="font-semibold">Genre: </b>{{movie.genre}}</p>
           </div>
           <div class="mt-3">
             <p>
-              <b class="font-semibold">Casts: </b> Vin Diesel, Gal Gadot,
-              Ludacris, Daniela Melchior, Scott Eastwood
-            </p>
+              <b class="font-semibold">Casts: </b>{{movie.cast}}</p>
           </div>
         </div>
         <div class="w-full lg:w-5/12 m-2">
           <div class="mt-3">
-            <p><b class="font-semibold">Duration: </b>142 min</p>
+            <p><b class="font-semibold">Duration: </b>{{movie.duration}}</p>
           </div>
           <div class="mt-3">
             <p>
-              <b class="font-semibold">Country: </b> United States of America,
-              Japan
-            </p>
+              <b class="font-semibold">Country: </b>{{movie.countries}}</p>
           </div>
           <div class="mt-3">
             <p>
-              <b class="font-semibold">Production: </b> Universal Pictures,
-              Original Film, One Race, Perfect Storm Entertainment, Dentsu, RK
-              films
-            </p>
+              <b class="font-semibold">Production: </b>{{movie.production}}</p>
           </div>
         </div>
       </div>
@@ -120,10 +113,10 @@
         <div
           class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt">
         </div>
-        <a href="#" title="Get quote now"
+        <button (click)="onAddFavorite(movie.id)"
           class="relative w-full inline-flex items-center justify-center px-8 py-4 text-lg font-bold text-white transition-all duration-200 bg-gray-900 font-pj rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
           role="button">+ Add Favourite
-        </a>
+        </button>
       </div>
     </div>
   </div>
@@ -137,12 +130,9 @@
     </div>
 
     <div class="w-full flex flex-wrap gap-3 mt-10">
-      <app-cards Width="w-52" Height="300" />
-      <app-cards Width="w-52" Height="300" />
-      <app-cards Width="w-52" Height="300" />
-      <app-cards Width="w-52" Height="300" />
-      <app-cards Width="w-52" Height="300" />
-      <app-cards Width="w-52" Height="300" />
+      <ng-container *ngFor="let movie of simillerMoviesArray">
+        <app-cards Width="w-52" Height="300" [id]="movie.id" [name]="movie.name" [img]="movie.img" [date]="movie.date"/> 
+      </ng-container> 
 
     </div>
 
