--- a/src/app/component/admin-update-user/admin-update-user.component.html
+++ b/src/app/component/admin-update-user/admin-update-user.component.html
@@ -6,7 +6,7 @@
             <p class="text-gray-900 font-semibold text-2xl"> Update User</p>
         </div>
         
-        <form [formGroup]="adminUpdateUserForm" (ngSubmit)="onUserUpdate()">
+        <form *ngIf="adminUpdateUserForm" [formGroup]="adminUpdateUserForm" (ngSubmit)="onUserUpdate()">
             <div class="flex-grow flex justify-end">
                 <label class="inline-flex items-center mb-5 cursor-pointer">
                     <input formControlName="UpdateUserActive" type="checkbox" class="sr-only peer">
@@ -16,7 +16,10 @@
                 </label>
             </div>
             <div class="grid gap-6 mb-6 md:grid-cols-2">
-                
+                <input type="text"
+                formControlName="UpdateUser_id"
+                class="bg-gray-50 hidden border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="John" required />
                 <div>
                     <label for="first_name"
                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First
@@ -98,4 +101,23 @@
     </div>
 </div>
     </div>
+        <!-- alert -->
+        <div class="fixed top-16 right-1">
+            <div #alertBorder id="alert-border" class="hidden w-full items-center p-4 mb-4 text-green-800 border-t-4 border-green-300 bg-green-50 dark:text-green-400 dark:bg-gray-800 dark:border-green-800" role="alert">
+                <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                  <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                </svg>
+                <div class="ms-3 text-sm font-medium">
+                  User Successfully Updated.
+                </div>
+                <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-green-400 dark:hover:bg-gray-700"  data-dismiss-target="#alert-border" aria-label="Close">
+                  <span class="sr-only">Dismiss</span>
+                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                  </svg>
+                </button>
+            </div>
+        </div>
+       
+        <!-- alert -->
 </section>
