--- a/src/app/component/admin-manage-users/admin-manage-users.component.html
+++ b/src/app/component/admin-manage-users/admin-manage-users.component.html
@@ -19,8 +19,8 @@
         </div>
         <div class="flex justify-end mx-auto w-6/12">
             <a href="./admin/manage-users/add"
-                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Add
-                User</a>
+                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                Add User</a>
         </div>
     </div>
 
@@ -73,7 +73,6 @@
                     <td class="px-6 py-4">
                         <a href="./admin/manage-users/info/{{user.id}}"
                             class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                        <a href="#" class="font-medium text-red-600 dark:text-blue-500 hover:underline ms-5">Block</a>
                     </td>
                 </tr>
             </tbody>
