--- a/src/app/component/admin-add-film/admin-add-film.component.html
+++ b/src/app/component/admin-add-film/admin-add-film.component.html
@@ -6,23 +6,25 @@
                 <div class="flex flex-col xl:flex-row justify-center p-3">
                     <!-- file Chooser -->
                     <div class="w-full xl:w-6/12 flex justify-center">
-                        <div 
-                        [ngClass]="{'border-red-600':isAddFilmSubmited && addFilmFormValidate['addMovie_img'].errors}"
-                        class="overflow-hidden relative flex justify-start items-center border">
+                        <div [ngClass]="{'border-red-600':isAddFilmSubmited && addFilmFormValidate['addMovie_img'].errors}"
+                            class="overflow-hidden relative flex justify-start items-center border">
                             <div
                                 class="w-80 h-full flex justify-start absolute bg-black opacity-0 hover:opacity-80 duration-200">
                                 <div class="flex items-center justify-center w-full">
                                     <label for="dropzone-file"
                                         class="flex flex-col items-center justify-center w-full h-full border-2 border-gray-300 border-dashed cursor-pointer bg-gray-50 dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
                                         <div class="flex flex-col items-center justify-center pt-5 pb-6">
-                                            <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
-                                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                                    stroke-width="2"
+                                            <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400"
+                                                aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                                viewBox="0 0 20 16">
+                                                <path stroke="currentColor" stroke-linecap="round"
+                                                    stroke-linejoin="round" stroke-width="2"
                                                     d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
                                             </svg>
                                         </div>
-                                        <input  id="dropzone-file" (change)="onFileSelected($event)" formControlName="addMovie_img" type="file" accept="image/*" class="hidden" />
+                                        <input id="dropzone-file" (change)="onFileSelected($event)"
+                                            formControlName="addMovie_img" type="file" accept="image/*"
+                                            class="hidden" />
                                     </label>
                                 </div>
                             </div>
@@ -36,15 +38,6 @@
                             <div class="flex-grow">
                                 <p class="text-xl font-semibold text-gray-700">Add New Movie</p>
                             </div>
-                            <div class="flex-grow flex justify-end">
-                                <label class="inline-flex items-center mb-5 cursor-pointer">
-                                    <input formControlName="addFilmActive" type="checkbox" value="" class="sr-only peer">
-                                    <div
-                                        class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600">
-                                    </div>
-                                </label>
-                            </div>
-
                         </div>
                         <div class=" mt-4">
                             <label for="first_name"
@@ -169,14 +162,29 @@
                                 placeholder="" required />
                             @if(isAddFilmSubmited && addFilmFormValidate['addMovie_Production'].errors){
                             @if (addFilmFormValidate['addMovie_Production'].errors['required']) {
-                            <small class="ml-3 text-red-600">Movie Released Date Is Required </small>
+                            <small class="ml-3 text-red-600">Movie Production Is Required </small>
                             }
                             }
                         </div>
                     </div>
+                    <div class="flex-grow mt-5">
+                        <label for="first_name"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Movie URL:</label>
+                        <input type="text" formControlName="addMovie_Url"
+                            [ngClass]="{'border-red-600':isAddFilmSubmited && addFilmFormValidate['addMovie_Url'].errors}"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-xl focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            placeholder="" required />
+                        @if(isAddFilmSubmited && addFilmFormValidate['addMovie_Url'].errors){
+                        @if (addFilmFormValidate['addMovie_Url'].errors['required']) {
+                        <small class="ml-3 text-red-600">Movie Url Is Required </small>
+                        }
+                        }
+                    </div>
+
                     <div class="w-full flex justify-end mt-5 mb-2">
                         <button type="submit"
-                            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">+ Add</button>
+                            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">+
+                            Add</button>
                         <button type="button" (click)="onResetFilmForms()"
                             class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Cancel</button>
                     </div>
@@ -187,4 +195,23 @@
             </form>
         </div>
     </div>
+        <!-- alert -->
+        <div class="fixed top-16 right-1">
+            <div #alertBorder id="alert-border" class="hidden w-full items-center p-4 mb-4 text-green-800 border-t-4 border-green-300 bg-green-50 dark:text-green-400 dark:bg-gray-800 dark:border-green-800" role="alert">
+                <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                  <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                </svg>
+                <div class="ms-3 text-sm font-medium">
+                  New Movie Successfully Uploaded.
+                </div>
+                <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-green-400 dark:hover:bg-gray-700"  data-dismiss-target="#alert-border" aria-label="Close">
+                  <span class="sr-only">Dismiss</span>
+                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                  </svg>
+                </button>
+            </div>
+        </div>
+       
+        <!-- alert -->
 </Section>
